virt01/manual/mail/rspamd/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: rspamd
  labels:
    app: rspamd
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: rspamd
  template:
    metadata:
      labels:
        app: rspamd
    spec:
      serviceAccountName: rspamd-sa
      containers:
        - name: rspamd
          image: ghcr.io/nforceroh/k8s-rspamd:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 11332
              name: milter-port
              protocol: TCP
            - containerPort: 11333
              name: worker-port
              protocol: TCP
            - containerPort: 11334
              name: web-port
              protocol: TCP
          resources:
            requests:
              cpu: "10m"
              memory: "1Gi"
          volumeMounts:
            - name: rspamd-pv
              mountPath: /var/lib/rspamd
            # - name: rspamd-local-pv
            #   mountPath: /etc/rspamd/local.d
            - mountPath: /dev/shm
              name: dshm
        - name: unbound
          image: mvance/unbound:latest
          ports:
            - containerPort: 53
              name: dns-udp
              protocol: UDP
          resources:
            limits:
              memory: 1Gi
              cpu: 200m
          securityContext:
            capabilities:
              add: ["NET_BIND_SERVICE"]
      dnsPolicy: "ClusterFirst"
      volumes:
        - name: rspamd-pv
          persistentVolumeClaim:
            claimName: rspamd-pvc
        # - name: rspamd-local-pv
        #   persistentVolumeClaim:
        #     claimName: rspamd-local-pvc
        - name: dshm
          emptyDir:
            medium: Memory
            sizeLimit: "128Mi" # Increase this based on your map sizes
