virt01/manual/mail/rspamd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rspamd-svc
  labels:
    app: rspamd
  annotations:
    metallb.io/address-pool: vlan1000-apps
spec:
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack  
  ports:
    - port: 11332
      protocol: TCP
      name: milter-svc-port
    - port: 11333
      protocol: TCP
      name: worker-svc-port
    - port: 11334
      protocol: TCP
      name: web-svc-port
  selector:
    app: rspamd
